--- a/src/css/style.css
+++ b/src/css/style.css
@@ -215,3 +215,76 @@ h3 {
     font-size: 1.2rem;
     opacity: 0.7;
 }
+
+@media (max-width: 1024px) {
+    #searchbarForm {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    #selectFormDiv {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+    #selectFormOne, #selectFormTwo {
+        display: flex;
+        flex-direction: row;
+        width: auto;
+        height: auto;
+        margin: 0;
+    }
+
+    #category, #price, #priceHighLow, #ratingHighLow {
+        margin-right: 10px;
+    }
+
+    #categoryFilter, #priceFilter, #priceHighLowSort, #ratingHighLowSort {
+        width: auto;
+        min-width: 150px;
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 980px) {
+    #selectFormOne, #selectFormTwo {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        width: auto;
+        height: auto;
+        margin-bottom: 10px;
+    }
+    #category, #price, #priceHighLow, #ratingHighLow {
+        display: none;
+    }
+    h1{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 540px) {
+    #selectFormDiv {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    #selectFormTwo{
+        margin: 0;
+    }
+
+    #searchbarForm{
+        margin: 0;
+    }
+
+    #categoryFilter, #priceFilter, #priceHighLowSort, #ratingHighLowSort {
+        width: 100px;  
+        max-width: 120px; 
+        padding: 5px; 
+        font-size: 14px; 
+    }
+}
